04_OOD/example/oop/DesignPrinciples/src/com/schonherz/education/oop/design/principles/clazz/solid/ocp/drawing/bad/Rectangle.java
package com.schonherz.education.oop.design.principles.clazz.solid.ocp.drawing.bad;

/**
 * This class indicates rectangle shape
 * 
 * @author Janos Pelsoczi
 *
 */
public class Rectangle extends Shape {
	Rectangle() {
		super.m_type = 1;
	}
}
